--- a/new.html
+++ b/new.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8"><!--告诉浏览器用哪个字典-->
     <meta name="viewport" content="width=device-width, initial-scale=1" /><!--用于兼容老浏览器-->
-    <title>康文昌的在线HTML 教学小工具</title>
+    <title>无话可说</title>
     <style>  
       body {
         margin: 0;
